# pytest-trace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  tests.yml
src/pytest_trace/: plugin.py
tests/: conftest.py  test_pytest_trace.py
